<resources>
    <string name="app_name">LazarANMA</string>
    <string name="Login">Login</string>
    <string name="IDenter">Enter your ID</string>
    <string name="Passenter">Enter your Password</string>
    <string name="Enter">Registeration for Mothers</string>
    <string name="Mname">Mother\'s Name</string>
    <string name="Fname">Father\'s Name</string>
    <string name="Madhar">Mother\'s Aadhar Number</string>
    <string name="Fadhar">Father\'s AAdhar Number</string>
    <string name="Street">House No.</string>
    <string name="locality">Locality</string>
    <string name="State">State</string>
    <string name="city">City</string>
    <string name="LID">LocalityID</string>
    <string name="phone">Mobile Number</string>
    <string name="EMail">Email ID</string>
    <string-array name="Heading">

        <item>Mother \n Registeration</item>
        <item>Mother \n Vaccination</item>
        <item>Child \n Registeration</item>
        <item>Child \n Vaccination</item>
    </string-array>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">tdmZYblELna1qEfzXCbWVPkLT6meo8rGBeS6hqFe</string>
    <string name="back4app_client_key">oAGBmjTOx2Tqn7t74yloKghIX5Y7hTyTejfm89Sf</string>
    <string name="EnterMID">Enter Mother\'s ID</string>
    <string name="DOB">Date of Birth</string>
    <string name="BCN">Birth Certificate Number</string>
    <string name="Name">Name</string>
    <string name="fetch">Fetch Offline Data</string>
    <string name="verifyad">Verify Aadhar Number</string>
    <string name="EntAdh">Enter Aadhar Number</string>
    <string name="vaccinate">Vaccinate</string>

    <string name="instructions">
Place your fingertip on the Home button to verify your identity
</string>
</resources>
