<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".RegisterationChildrenActivity">>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="17dp"
        android:layout_marginBottom="5dp"
        android:layout_margin="5dp"
        android:textAlignment="center"
        android:text="@string/Enter"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterMID"
        android:id="@+id/et_mid"
        android:layout_margin="5dp"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Name"
        android:id="@+id/et_name"
        android:layout_margin="5dp"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LID"
        android:layout_margin="5dp"
        android:editable="false"
        android:id="@+id/et_lid"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/DOB"
        android:id="@+id/et_dob"
        android:layout_margin="5dp"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/BCN"
        android:id="@+id/et_bcn"
        android:layout_margin="5dp"/>

</LinearLayout>