<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textSize="20dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:padding="10dp"
        android:textAlignment="center"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:id="@+id/et_id"
        android:drawableLeft="@drawable/ic_id"
        android:hint="@string/IDenter"/>
    <android.support.design.widget.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:drawableLeft="@drawable/ic_pass"
        android:id="@+id/et_pass"
        android:hint="@string/Passenter"/>

</LinearLayout>